@@ -1,3 +1,10 @@
+15112018
+- edit tabel mona_client
+	ALTER TABLE `mona_client`
+	ADD COLUMN `CLIENT_PICNAME` CHAR(200) NULL DEFAULT NULL AFTER `CLIENT_NAME`,
+	ADD COLUMN `CLIENT_LOCATION` CHAR(200) NULL DEFAULT NULL AFTER `CLIENT_PICNAME`,
+	ADD COLUMN `CLIENT_PHONE` CHAR(200) NULL DEFAULT NULL AFTER `CLIENT_LOCATION`,
+	ADD COLUMN `CLIENT_MAIL` CHAR(200) NULL DEFAULT NULL AFTER `CLIENT_PHONE`;
 13112018
 - Create tabel mona_client
 CREATE TABLE `mona_client` (
